--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,5 +1,7 @@
 {% extends 'main/base.html' %}
 
+{% block meta_title %}Garden Guru - Best Gardening Product Reviews in UK{% endblock %}
+{% block meta_desc %}Garden Guru is UK best website for all things gardening; Discover the best gardening products with our in-depth reviews. From tools to plants, our experts provide unbiased recommendations to help you create a thriving garden. Find the perfect products to cultivate your green space today!{% endblock %}
 
 {% block content %}
   <!-- ======= Hero Section ======= -->
@@ -104,6 +106,7 @@
     </section><!-- End Counts Section -->
 
     <!-- ======= Why Us Section ======= -->
+    <!--
     <section id="why-us" class="why-us">
       <div class="container">
 
@@ -123,7 +126,7 @@
             <div class="icon-boxes d-flex flex-column justify-content-center">
               <div class="row">
                 {% for productcat in ProductCategories %}
-                {% if productcat.id in TopProductCats %}
+                
                 <div class="col-xl-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                   <div class="icon-box mt-4 mt-xl-0">
                       <a href="/productcategory/{{productcat.id}}">
@@ -133,50 +136,20 @@
                     </a>
                   </div>
                 </div>
-                {% endif %}
+                
                 {% endfor %}
                 
                 
               </div>
-            </div><!-- End .content-->
-          </div>
+            </div>-->
+            <!-- End .content-->
+          <!--</div>
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section>--><!-- End Why Us Section -->
 
-    <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
-      <div class="container">
-
-        <div class="text-center col-lg-12 p-4" data-aos="zoom-in">
-          <h3>Gardening Advice and Tips</h3>
-          <p>We've got everything you need to create your dream garden. Whether you're a seasoned gardener or just starting out, our goal is to help you find the best products and techniques to achieve your gardening goals. So take a look around and explore our tips and advice sections to unlock the secrets to successful gardening:</p>
-
-          <div class="container d-flex justify-content-center activedropdown p-4">
-            <div class="col-lg-6">
-            <ul>
-                {% for NavSubCat in NavSubCats %}
-                {% if NavSubCat.NavCatName.id == 1 %}
-                <li><a href="/articlecategory/{{NavSubCat.id}}"><h6 style="color:white">{{NavSubCat}}</h6></a></li>
-                {% endif %}
-                {% endfor %}
-              </ul>
-            </div>
-         <div class="col-lg-6">
-            <ul>
-                {% for NavSubCat in NavSubCats %}
-                {% if NavSubCat.NavCatName.id == 2 %}
-                <li><a href="/articlecategory/{{NavSubCat.id}}"><h6 style="color:white">{{NavSubCat}}</h6></a></li>
-                {% endif %}
-                {% endfor %}
-              </ul>
-            </div>
-            </div>
-        </div>
-
-      </div>
-    </section><!-- End Cta Section -->
+    
 
    
 
@@ -205,7 +178,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-cat{{ProductCategory.ProductCategoryGroupName.id}}">
             <a href="productcategory/{{ProductCategory.id}}">
             <div class="portfolio-wrap">
-              <img src="/static/{{ProductCategory.ProductCategoryimg}}" class="img-fluid" alt="Best {{ProductCategory.ProductCategoryName}} {{Year}} UK ">
+              <img src="/static/{{ProductCategory.ProductCategoryimg}}" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>{{ProductCategory.ProductCategoryName}}</h4>
                 <p>{{ProductCategory.ProductCategoryGroupName}}</p>
@@ -216,6 +189,32 @@
         {% endfor %}
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta mt-4">
+      <div class="container">
+
+        <div class="text-center col-lg-12 p-4" data-aos="zoom-in">
+          <h3>Gardening Advice and Tips</h3>
+          <p>We've got everything you need to create your dream garden. Whether you're a seasoned gardener or just starting out, our goal is to help you find the best products and techniques to achieve your gardening goals. So take a look around and explore our tips and advice sections to unlock the secrets to successful gardening:</p>
+
+          <div class="container d-flex justify-content-center activedropdown p-4">
+          
+        {% for NavSubCat in NavSubCats %}
+         <div class="col-lg-4">
+            
+                
+                <a href="/articlecategory/{{NavSubCat.id}}"><h6 style="color:white">{{NavSubCat}}</h6></a>
+                
+                
+              
+            </div>
+        {% endfor %}
+            </div>
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
 
   </main><!-- End #main -->
 
