--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -15,8 +15,10 @@ body {
 }
 
 a {
-  color: #009970;
+  color: #009952;
   text-decoration: none;
+  font-weight: bold;
+  /*text-decoration: underline;*/
 }
 
 a:hover {
@@ -43,7 +45,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #009970;
+  background: #009952;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -98,7 +100,7 @@ h6 {
 #header .logo {
   overflow: hidden;
   padding: 16px 30px 12px 30px;
-  background: #009970;
+  background: #009952;
 }
 
 #header .logo h1 {
@@ -125,12 +127,12 @@ h6 {
   #header {
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
     top: 0;
-    background: #009970;
+    background: #009952;
   }
 
   #header.header-scrolled,
   #header .header-container {
-    background: #009970;
+    background: #009952;
   }
 
   #header .logo {
@@ -194,12 +196,12 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #009970;
+  color: #009952;
 }
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #009970;
+  background: #009952;
   padding: 10px 25px;
   margin-left: 30px;
   margin-right: 15px;
@@ -245,7 +247,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #009970;
+  color: #009952;
 }
 
 .navbar .dropdown:hover>ul {
@@ -340,7 +342,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #009970;
+  color: #009952;
 }
 
 .navbar-mobile .getstarted,
@@ -375,7 +377,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #009970;
+  color: #009952;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -387,7 +389,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 90vh;
+  height: 70vh;
   background: url("../img/hero-bg.jpg") center center;
   background-size: cover;
   position: relative;
@@ -399,7 +401,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -408,14 +410,19 @@ h6 {
 }
 
 #hero h1 {
+  /*background: rgba(0, 0, 0, 0.5);*/
+  background: linear-gradient(to right, transparent, rgba(0, 153, 82, 0.6), transparent);
   margin: 0 0 10px 0;
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+  letter-spacing: 5px;
+  text-transform: uppercase;
 }
 
 #hero h2 {
+  background: linear-gradient(to right, transparent, rgba(0, 153, 82, 0.6), transparent);
   color: #eee;
   margin-bottom: 40px;
   font-size: 15px;
@@ -426,6 +433,7 @@ h6 {
 }
 
 #hero .btn-get-started {
+  background: rgba(0, 153, 82, 0.6);
   font-family: "Poppins", sans-serif;
   text-transform: uppercase;
   font-weight: 500;
@@ -441,8 +449,8 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #009970;
-  border: 2px solid #009970;
+  background: #009952;
+  border: 2px solid #009952;
 }
 
 @media (min-width: 1024px) {
@@ -497,7 +505,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #009970;
+  background: #009952;
   bottom: 0;
   left: 0;
 }
@@ -560,7 +568,7 @@ section {
   top: 7px;
   position: absolute;
   font-size: 20px;
-  color: #009970;
+  color: #009952;
 }
 
 .about .content p:last-child {
@@ -571,7 +579,7 @@ section {
 # Counts
 --------------------------------------------------------------*/
 .counts {
-  background: #009970;
+  background: #009952;
   padding: 40px 0 20px 0;
   color: #fff;
 }
@@ -609,12 +617,12 @@ section {
 
 .articletitle h3 { 
   text-align: center;
-  color: #009970;
+  color: #009952;
   text-transform: uppercase;
   font-size: 1.5rem;
   padding: 1px;
   font-weight: 750;
-  background: linear-gradient(to right, #fff, #009970, #fff);
+  background: linear-gradient(to right, #fff, #009952, #fff);
 }
 
 .articletitle h3 a {
@@ -623,7 +631,7 @@ section {
   padding: 3px;
   text-decoration: none;
   letter-spacing: 2px;
-  color: #009970;
+  color: #009952;
 }
 
 .article .articlesectionpic {
@@ -680,7 +688,7 @@ section {
 --------------------------------------------------------------*/
 .why-us .content {
   padding: 30px;
-  background: #009970;
+  background: #009952;
   border-radius: 4px;
   color: #fff;
 }
@@ -709,7 +717,7 @@ section {
 }
 
 .why-us .content .more-btn:hover {
-  color: #009970;
+  color: #009952;
   background: #fff;
 }
 
@@ -721,11 +729,12 @@ section {
   padding: 40px 30px;
   width: 100%;
   transition: 0.3s;
+
 }
 
 .why-us .icon-boxes .icon-box i {
   font-size: 40px;
-  color: #009970;
+  color: #009952;
   margin-bottom: 30px;
 }
 
@@ -744,11 +753,45 @@ section {
   box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.15);
 }
 
+#why-us .btn-get-started {
+  background: rgba(0, 153, 82, 1);
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+#why-us .btn-get-started:hover {
+  border: 2px solid #009952;
+  background:#fff;
+  color: #009952;
+}
+
+#why-us img:hover {
+  transform: scale(1.1);
+}
+
+/*#why-us .starsandlink {
+  position: absolute;
+  bottom:0;
+}*/
+
+
+
 /*--------------------------------------------------------------
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.7), rgba(0, 0, 0, 0.7)), url("../img/cta-bg.jpg") fixed center center;
+  width:100%;
+  background: linear-gradient(rgba(2, 2, 2, 0.3), rgba(0, 0, 0, 0.3)), url("../img/cta-bg.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -779,8 +822,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #009970;
-  border: 2px solid #009970;
+  background: #009952;
+  border: 2px solid #009952;
 }
 
 /*--------------------------------------------------------------
@@ -798,13 +841,13 @@ section {
   width: 64px;
   height: 64px;
   border-radius: 50px;
-  border: 1px solid #009970;
+  border: 1px solid #009952;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
   transition: ease-in-out 0.3s;
-  color: #009970;
+  color: #009952;
 }
 
 .services .icon-box .icon i {
@@ -834,12 +877,12 @@ section {
 }
 
 .services .icon-box:hover h4 a {
-  color: #009970;
+  color: #009952;
 }
 
 .services .icon-box:hover .icon {
   color: #fff;
-  background: #009970;
+  background: #009952;
 }
 
 /*--------------------------------------------------------------
@@ -874,7 +917,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #009970;
+  background: #009952;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -907,7 +950,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-info {
-  opacity: 0;
+  /*opacity: 0;*/
   position: absolute;
   top: 0;
   left: 0;
@@ -987,11 +1030,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #009970;
+  border: 1px solid #009952;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #009970;
+  background-color: #009952;
 }
 
 .portfolio-details .portfolio-info {
@@ -1103,11 +1146,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #009970;
+  border: 1px solid #009952;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #009970;
+  background-color: #009952;
 }
 
 /*--------------------------------------------------------------
@@ -1145,6 +1188,7 @@ section {
   margin-bottom: 5px;
   font-size: 20px;
   color: #36343a;
+
 }
 
 .team .member span {
@@ -1197,7 +1241,7 @@ section {
 }
 
 .team .member .social a:hover {
-  background: #009970;
+  background: #009952;
 }
 
 .team .member .social a+a {
@@ -1220,7 +1264,7 @@ section {
   float: left;
   width: 44px;
   height: 44px;
-  background: #009970;
+  background: #009952;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1311,7 +1355,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #009970;
+  background: #009952;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1460,7 +1504,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #009970;
+  color: #009952;
 }
 
 #footer .footer-newsletter {
@@ -1500,7 +1544,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #009970;
+  background: #009952;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1520,7 +1564,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #009970;
+  background: #009952;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1546,7 +1590,7 @@ body{background:#eee} .ratings i{font-size: 16px;color: red}
                       .para{font-size: 16px}
 
 .vl {
-  border-right: solid 1px #009970;
+  border-right: solid 1px #009952;
 }
 
 @font-face {
@@ -1868,3 +1912,34 @@ body {
 
 
 
+#productlist .linkbtn {
+  background: rgba(0, 153, 82, 1);
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+#productlist .linkbtn:hover {
+  border: 2px solid #009952;
+  background:#fff;
+  color: #009952;
+}
+
+#disclaimer {
+  margin: 20px auto;
+  font-family: 'Lato';
+  background:#666;
+  color:#000;
+  background:#ffc;
+  display:block;
+  
+}
