--- a/main/templates/main/articlecategory.html
+++ b/main/templates/main/articlecategory.html
@@ -32,7 +32,7 @@
                 <div class="col-lg-4 d-flex justify-content-center mt-4">
                   <div class="member" data-aos="zoom-in" data-aos-delay="100" style="width:100%">
                     <a href="/article/{{article.id}}">
-                    <div class="pic"><img src="{{article.Articleimg}}" class="img-fluid" alt=""></div>
+                    <div class="pic"><img src="{{article.Articleimg}}" class="img-fluid" alt="{{article.ArticleName}} - {{article.NavSubCatName}} section - {{article.ArticleTagName}}"></div>
                     <div class="member-info">
                       
                       <h5><span>{{article.ArticleName}}</span></h5>
