--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -178,7 +178,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-cat{{ProductCategory.ProductCategoryGroupName.id}}">
             <a href="productcategory/{{ProductCategory.id}}">
             <div class="portfolio-wrap">
-              <img src="/static/{{ProductCategory.ProductCategoryimg}}" class="img-fluid" alt="">
+              <img src="/static/{{ProductCategory.ProductCategoryimg}}" class="img-fluid" alt="Best UK {{ProductCategory.ProductCategoryName}} in {{Year}}">
               <div class="portfolio-info">
                 <h4>{{ProductCategory.ProductCategoryName}}</h4>
                 <p>{{ProductCategory.ProductCategoryGroupName}}</p>
