--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -636,14 +636,11 @@ section {
 
 .article .articlesectionpic {
   max-height: 200px;
-  height: auto;
   width:100%;
-  position: center;
-  background-size: contain;
+  background-size:cover;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-
+  margin:auto;
+ 
 }
 
 .articlelink {
