--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -69,7 +69,7 @@
               </ul>
             </li>
             
-            <li class="dropdown nav-link scrollto"><a href=""><span>Product Reviews</span> <i class="bi bi-chevron-down"></i></a>
+            <li class="dropdown nav-link scrollto"><a href=""><span>Products</span> <i class="bi bi-chevron-down"></i></a>
               <!--/allproductcats-->
               <ul>
                 {% for ProductCategoryGroup in ProductCategoryGroups %}
