--- a/main/templates/main/article.html
+++ b/main/templates/main/article.html
@@ -33,7 +33,16 @@
 
         </div>
         {{a.ArticleBody|safe}}
+
+        {% if a.ProductCategory.id > 0 %}
+        <div class="col-lg-12 mt-2">
+          <hr>
+          <i class="bi bi-caret-right-fill"></i><a href="/productcategory/{{a.ProductCategory.id}}"> Click here for best {{ a.ProductCategory.ProductCategoryName | lower }} of {{Year}}</a>
+          
+        </div>
+        {% endif %}
       </div>
+
     </section>
     <!-- End Article Section -->
 
