--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1187,6 +1187,7 @@ section {
   padding: 30px;
   border-radius: 10px;
   text-align: center;
+  width:100%;
 }
 
 .team .member .pic {
@@ -1195,10 +1196,14 @@ section {
   width: 150px;
   border-radius: 50%;
   margin: 0 auto 20px auto;
+
+
 }
 
 .team .member .pic img {
-
+  
+  width:150px;
+  min-height: 150px;
   transition: ease-in-out 0.3s;
 }
 
