product list sub cat not required

--- a/main/templates/main/productcategory.html
+++ b/main/templates/main/productcategory.html
@@ -286,12 +286,16 @@
         
           {% endfor %}
           <!--===PRODUCT END-->
+
+
         
         </div>
       </div>
     </div>
     <!-- End Product List Section -->
-   
+    <div class="container col-lg-10 mt-4 mb-4">
+        {{ pct.0.Text|safe }}
+    </div>
 
     
 
