correct django filters used

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -86,7 +86,7 @@
           </div>
 
           <div class="col-lg-4 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="{{ProductLists.count}}" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="{{ProductLists}}" data-purecounter-duration="1" class="purecounter"></span>
             <p>Products</p>
           </div>
 
