--- a/main/templates/main/productcategory.html
+++ b/main/templates/main/productcategory.html
@@ -76,7 +76,7 @@
                           <h3>Close contender</h3>
                       </div>
                       <a href="{{ProductLists.1.AmazonLink}}">
-                        <img class="img-fluid img-responsive rounded p-3" src="{{ProductLists.1.Productimg}}" alt="#2 of the best {{ ProductLists.0.ProductCategoryName }} in UK in {{Year}}"> 
+                        <img class="img-fluid img-responsive rounded p-3" src="{{ ProductLists.1.Productimg }}" alt="#2 of the best {{ ProductLists.1.ProductCategoryName }} in UK in {{Year}}"> 
                       </a>
                       <a href="{{ProductLists.1.AmazonLink}}">
                         <h5>{{ProductLists.1.ProductName}}</h5>
@@ -101,7 +101,7 @@
                           <h3>Alternative pick</h3>
                       </div>
                       <a href="{{ProductLists.2.AmazonLink}}">
-                        <img class="img-fluid img-responsive rounded p-3" src="{{ProductLists.2.Productimg}}" alt="#3 of the best {{ ProductLists.0.ProductCategoryName }} in UK in {{Year}}">
+                        <img class="img-fluid img-responsive rounded p-3" src="{{ ProductLists.2.Productimg }}" alt="#3 of the best {{ ProductLists.2.ProductCategoryName }} in UK in {{Year}}">
                       </a>
                       <a href="{{ProductLists.2.AmazonLink}}">
                         <h5>{{ProductLists.2.ProductName}}</h5>
@@ -248,7 +248,14 @@
                 </div>
                 
                 <div class="d-flex justify-content-center bg-white">
-                  <h5><strong><a class="linkbtn" href="{{Product.AmazonLink}}">£{{Product.ProductCost|floatformat:2}} on Amazon</a></strong></h5>
+                  <h5><strong>
+                  <a class="linkbtn" href="{{Product.AmazonLink}}">
+                    {% if Product.ProductCost > 0 %}
+                      £{{Product.ProductCost|floatformat:2}} on Amazon
+                    {% else %}
+                      Check on Amazon
+                    {% endif %}
+                  </a></strong></h5>
                 </div>
               </div>
             </div>
