--- a/main/templates/main/sitemap.html
+++ b/main/templates/main/sitemap.html
@@ -35,7 +35,7 @@
                   {% for a in Articles %}
 
                     {% if a.NavSubCatName.id == NavSubCat.id %}
-                      <li><a href="/article/{{a.id}}">{{a.ArticleTagName}} - {{a.ArticleName}}</a></li>
+                      <li><a href="/article/{{a.id}}">{{a.ArticleName}}</a></li>
                     {% endif %}
 
                   {% endfor %}
