--- a/main/templates/main/productcategory.html
+++ b/main/templates/main/productcategory.html
@@ -46,10 +46,10 @@
                       <div class="d-flex justify-content-center">
                           <h3>Best choice</h3>
                       </div>
-                      <a href="{{ProductLists.0.AmazonLink}}">
+                      <a href="{{ProductLists.0.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                         <img class="img-fluid img-responsive rounded p-3" src="{{ ProductLists.0.Productimg }}" alt="#1 of the best {{ ProductLists.0.ProductCategoryName }} in UK in {{Year}}">
                       </a>
-                      <a href="{{ProductLists.0.AmazonLink}}">
+                      <a href="{{ProductLists.0.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                         <h5>{{ProductLists.0.ProductName}}</h5>
                         <p>{{ProductLists.0.ProductBrand}}</p>
                     </a>
@@ -64,7 +64,7 @@
                     </div>-->
                     <div class="d-flex justify-content-center">
 
-                      <a href="{{ProductLists.0.AmazonLink}}" class="btn-get-started scrollto">Find retailer</a>
+                      <a href="{{ProductLists.0.AmazonLink}}/ref=nosim?tag=gardenguru-21" class="btn-get-started scrollto">Find retailer</a>
                     </div>
                   </div>
                   </div>
@@ -75,10 +75,10 @@
                       <div class="d-flex justify-content-center">
                           <h3>Close contender</h3>
                       </div>
-                      <a href="{{ProductLists.1.AmazonLink}}">
+                      <a href="{{ProductLists.1.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                         <img class="img-fluid img-responsive rounded p-3" src="{{ ProductLists.1.Productimg }}" alt="#2 of the best {{ ProductLists.1.ProductCategoryName }} in UK in {{Year}}"> 
                       </a>
-                      <a href="{{ProductLists.1.AmazonLink}}">
+                      <a href="{{ProductLists.1.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                         <h5>{{ProductLists.1.ProductName}}</h5>
                         <p>{{ProductLists.1.ProductBrand}}</p>
                     </a>
@@ -89,7 +89,7 @@
                       
                     </div>
                     <div class="d-flex justify-content-center">
-                      <a href="{{ProductLists.1.AmazonLink}}" class="btn-get-started scrollto">Find retailer</a>
+                      <a href="{{ProductLists.1.AmazonLink}}/ref=nosim?tag=gardenguru-21" class="btn-get-started scrollto">Find retailer</a>
                     </div>
                   </div>
                   </div>
@@ -100,10 +100,10 @@
                       <div class="d-flex justify-content-center">
                           <h3>Alternative pick</h3>
                       </div>
-                      <a href="{{ProductLists.2.AmazonLink}}">
+                      <a href="{{ProductLists.2.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                         <img class="img-fluid img-responsive rounded p-3" src="{{ ProductLists.2.Productimg }}" alt="#3 of the best {{ ProductLists.2.ProductCategoryName }} in UK in {{Year}}">
                       </a>
-                      <a href="{{ProductLists.2.AmazonLink}}">
+                      <a href="{{ProductLists.2.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                         <h5>{{ProductLists.2.ProductName}}</h5>
                         <p>{{ProductLists.2.ProductBrand}}</p>
                     </a>
@@ -114,7 +114,7 @@
                       
                     </div>
                     <div class="d-flex justify-content-center">
-                      <a href="{{ProductLists.2.AmazonLink}}" class="btn-get-started scrollto">Find retailer</a>
+                      <a href="{{ProductLists.2.AmazonLink}}/ref=nosim?tag=gardenguru-21" class="btn-get-started scrollto">Find retailer</a>
                     </div>
                     </div>
                   </div>
@@ -234,7 +234,7 @@
             <div class="col-md-3 mt-1 d-flex justify-content-center">
               <div class="productname d-flex flex-column">
                 <div class="max-auto d-flex justify-content-center">
-                  <a href="{{Product.AmazonLink}}">
+                  <a href="{{Product.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                     <img class="img-fluid img-responsive rounded p-3" src="{{Product.Productimg}}" alt="list of best {{ ProductLists.0.ProductCategoryName }} in UK in {{Year}}">
                   </a>
                 </div>
@@ -249,7 +249,7 @@
                 
                 <div class="d-flex justify-content-center bg-white">
                   <h5><strong>
-                  <a class="linkbtn" href="{{Product.AmazonLink}}">
+                  <a class="linkbtn" href="{{Product.AmazonLink}}/ref=nosim?tag=gardenguru-21">
                     {% if Product.ProductCost > 0 %}
                       £{{Product.ProductCost|floatformat:2}} on Amazon
                     {% else %}
