changed affiliate disclaimer

--- a/main/templates/main/productcategory.html
+++ b/main/templates/main/productcategory.html
@@ -23,7 +23,7 @@
     <div id="disclaimer" class="col-lg-12 text-center">
       <small>
 
-        <p> <i class="bi bi-info-circle"></i>   We thoroughly research and fact-check each product - we <strong>DO NOT</strong> make any commision if you buy from our links to remain fair, honest and unbiased.</p>
+        <p> <i class="bi bi-info-circle"></i> We thoroughly research and fact-check each product - as an Amazon Associate we earn from qualifying purchases.</p>
       </small>
     </div>
 
