--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -746,6 +746,7 @@ section {
   padding: 40px 30px;
   width: 100%;
   transition: 0.3s;
+  /*max-height:300px;*/
 
 }
 
@@ -1866,7 +1867,10 @@ body {
       hsl(var(--clr-neutral-hsl-700), .2);
     border-radius: 2rem;
     padding:0.5rem;
-    
+  }
+
+  .productname img {
+    max-height: 250px;
   }
 }
 
