--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -69,17 +69,17 @@
               </ul>
             </li>
             
-            <li class="dropdown nav-link scrollto"><a href=""><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+            <li class="dropdown nav-link scrollto"><a href="/#categories"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
               <!--/allproductcats-->
               <ul>
                 {% for ProductCategoryMasterGroup in ProductCategoryMasterGroups %}
                 <li class="dropdown nav-link scrollto">
-                  <a href="/allproductcats#{{ProductCategoryMasterGroup.ProductCategoryMasterGroupName}}"><span>{{ProductCategoryMasterGroup.ProductCategoryMasterGroupName}}</span><i class="bi bi-chevron-right"></i></a>
+                  <a href="/allproductcats/{{ProductCategoryMasterGroup.id}}#{{ProductCategoryMasterGroup.ProductCategoryMasterGroupName}}"><span>{{ProductCategoryMasterGroup.ProductCategoryMasterGroupName}}</span><i class="bi bi-chevron-right"></i></a>
                   <ul>
                   {% for ProductCategoryGroup in ProductCategoryGroups %}
                   {% if ProductCategoryGroup.ProductCategoryMasterGroupName.id == ProductCategoryMasterGroup.id %}
                     <li class="dropdown nav-link scrollto">
-                      <a href="/allproductcats#{{ProductCategoryGroup.ProductCategoryGroupName}}">{{ProductCategoryGroup.ProductCategoryGroupName}}<!--<i class="bi bi-chevron-right"></i>--></a>
+                      <a href="/allproductcats/{{ProductCategoryMasterGroup.id}}#{{ProductCategoryGroup.ProductCategoryGroupName}}">{{ProductCategoryGroup.ProductCategoryGroupName}}<!--<i class="bi bi-chevron-right"></i>--></a>
                       <!--
                       
                       -->
